[package]
name = "solana-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
solana-sdk = "1.17.0"
solana-program = "1.17.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
base64 = "0.21"
ed25519-dalek = "1.0"
thiserror = "1.0"
